<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EventsActivity" >

    <TextView
        android:id="@+id/textView_events_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_events_title"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/listView_events"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:choiceMode="singleChoice"
        android:fadeScrollbars="false" />

    <Button
        android:id="@+id/button_event_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="23dp"
        android:layout_marginRight="18dp"
        android:text="@string/btn_continue" />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="18dp"
        android:text="@string/btn_retry" />

    <TextView
        android:id="@+id/textView_local_event_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView_events"
        android:layout_below="@+id/listView_events"
        android:hint="@string/tv_local_event_hint" />

</RelativeLayout>