<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView_products_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_products_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_products_title"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_products_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="1dp"
        android:text="@string/btn_continue" />

    <com.paylogic.scanwarelite.views.DeselectAllTextView
        android:id="@+id/tv_deselect_all"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView_products"
        android:layout_below="@+id/textView_event_name"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="deselectAll"
        android:padding="10dp"
        android:text="@string/tv_deselect_all"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/selector_tv_select_all" />

    <com.paylogic.scanwarelite.views.SelectAllTextView
        android:id="@+id/tv_select_all"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_deselect_all"
        android:layout_alignBottom="@+id/tv_deselect_all"
        android:layout_alignRight="@+id/listView_products"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:onClick="selectAll"
        android:padding="10dp"
        android:text="@string/tv_select_all"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/selector_tv_select_all" />

    <ListView
        android:id="@+id/listView_products"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_products_continue"
        android:layout_below="@+id/tv_deselect_all"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:choiceMode="multipleChoice"
        android:fadeScrollbars="false" />

</RelativeLayout>